[tool.poetry]
name = "tamu_csce_636_project1"
version = "0.0.3"
description = "Just a tool for tamu_csce_636"
authors=[]

[tool.extra]
author='Jeff hykin'
author_email='jeff.hykin+pypi@gmail.com'
url='https://github.com/jeff-hykin/tamu_csce_636_project1'
license = "MIT"
main_module_path = "main/tamu_csce_636_project1"

[[tool.extra.pure_python_packages]]
path = "main/tamu_csce_636_project1"

[tool.poetry.dependencies]
python = ">=3.7,<3.12"

[tool.poetry.dev-dependencies]
twine = "3.4.1"
"keyrings.alt" = "4.0.2"
toml = "^0.10.2"
file-system-py = "0.0.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
